frontend/test/should_fail/defYield_008b.grg
using defYield;

test t
{
	y:B;
---
	def x:B;
	yield { x = y; }
}

pattern p(x:B --- def z:B)
{
---
	yield { z = x; }
}
